RESOLVED FIXED 283674
[visionOS] Layers that `containsBitmapOnly` should not use Dynamic Content Scaling
https://bugs.webkit.org/show_bug.cgi?id=283674
Summary [visionOS] Layers that `containsBitmapOnly` should not use Dynamic Content Sc...
Etienne
Reported 2024-11-25 03:13:26 PST
Layers that `containsBitmapOnly` should not use Dynamic Content Scaling
Attachments
Etienne
Comment 1 2024-11-25 03:55:24 PST
Etienne
Comment 2 2024-11-25 03:55:51 PST
Alexey Proskuryakov
Comment 3 2024-11-25 09:14:45 PST
*** Bug 283673 has been marked as a duplicate of this bug. ***
EWS
Comment 4 2024-12-03 00:12:09 PST
Committed 287262@main (65e7eccfee02): <https://commits.webkit.org/287262@main> Reviewed commits have been landed. Closing PR #37126 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.