[visionOS] Layers that `containsBitmapOnly` should not use Dynamic Content Scaling https://bugs.webkit.org/show_bug.cgi?id=283674 <rdar://140420051>

Reviewed by NOBODY (OOPS!).

Make the rendering purpose part of the RemoteImageBufferSet's
configuration so that we can skip dynamic content scaling when allocating
image buffers for bitmap only layer backings.
(The RemoteRenderingBackend already had the rendering purpose check.)

* Source/WebKit/GPUProcess/graphics/RemoteImageBufferSet.h:
* Source/WebKit/GPUProcess/graphics/RemoteImageBufferSet.messages.in:
* Source/WebKit/WebProcess/GPU/graphics/RemoteImageBufferSetProxy.cpp:
(WebKit::RemoteImageBufferSetProxy::willPrepareForDisplay):
* Source/WebKit/GPUProcess/graphics/RemoteImageBufferSet.cpp:
(WebKit::RemoteImageBufferSet::updateConfiguration):
Pass down the new configuration parameter.

(WebKit::RemoteImageBufferSet::ensureBufferForDisplay):
Don't create a dynamic content scaling resource cache for bitmap only
layers.